--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,9 +1,35 @@
-*{
+@import url('https://fonts.googleapis.com/css2?family=Inconsolata:wght@700&display=swap');
+
+body{
 font-family: 'Inconsolata', monospace;
 color: rgb(252, 0, 0);
 background-color: antiquewhite;
 }
 
+/* nav */
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #333;
+}
+
+li {
+  float: right;
+}
+
+li a {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+li a:hover {
+  background-color: #111;
+}
 
 
 /* text copy */
