--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,17 +8,21 @@
         <script src="js/qrcode.min.js"></script>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link
-            href="https://fonts.googleapis.com/css2?family=Inconsolata&display=swap"
-            rel="stylesheet">
-
         <link rel="stylesheet"
             href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
             integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
             crossorigin="anonymous">
 
     </head>
+    <nav>
+        <ul>
+            <li></li>
+            <li><a href="/tracker">Tracker</a></li>
+            <li><a class="active" href="/">Short URL</a></li>
+        </ul>
+    </nav>
     <body>
+
         <center>
 
             <div class="contianer" style="width:80%;margin: 5%;"></div>
@@ -57,6 +61,10 @@
                     <h3>...</h3>
                     <% } %>
                     </center>
+
+
+
+
                 </body>
 
                 <script>
@@ -66,7 +74,7 @@
                 document.getElementById("urlval").value = (x+(document.getElementById("urlval").value));
                 
                 var newurlshort = document.getElementById("urlval")
-                console.log(newurlshort+"<<newurlshort");
+                //console.log(newurlshort+"<<newurlshort");
                 var qrcode = new QRCode(document.getElementById("qrcode"), {
                     text: newurlshort.value,
                     width: 128,
