--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,7 +16,7 @@
     </head>
     <nav>
         <ul>
-            <li></li>
+            <li><a href="/topurl">Top URLs</a></li>
             <li><a href="/tracker">Tracker</a></li>
             <li><a class="active" href="/">Short URL</a></li>
         </ul>
